
################################################################################  
################################################################################

191030 Martin Raden
 * IntaRNA/OutputHandlerCsv :
   + RT
   * string2list() :
     + support of '*' encoding to generate full list
 * bin/CommandLineParsing :
   + docu and implementation of '*' outCsvCol behaviour  
 * README.md
   + RT CSV col

191029 Martin Raden
 * IntaRNA/PredictorMfe :
   * getNextBest() :
     * bugfix: energy check was applying duplicated ED values 
       (thanks to Jens Georg)
 * IntaRNA/PredictorMfe2dSeedExtension :
 * IntaRNA/PredictorMfe2dHeuristicSeedExtension :
 * IntaRNA/PredictorMfeEns2dSeedExtension :
   * fillHybrid*_left() : 
   * traceBack() : 
     * bugfix: missing case in noLP mode (direct left-stack extension)
 * IntaRNA/AccessibilityVrna :
   + addConstraints() : dedicated function to add constraint to VrnaFoldCompound
   * fillByRNAplfold() : using addConstraints()
 * IntaRNA/InteractionEnergy :
   + getBoltzmannWeight( Z_type ) : conversion from kcal/mol-based energies
   + getEall1|2() : ensemble energy for seq1|2
 * IntaRNA/InteractionEnergyBasePair :
   + getEall1|2() : NOT IMPLEMENTED YET
 * IntaRNA/InteractionEnergyIdxOffset :
   + getEall1|2() : forward to wrapped energy handler
 * IntaRNA/InteractionEnergyVrna :
   + Eall1|2 : ensemble energies for seq1|2
   + getEall1|2() : lazy computation of Eall1|2 using computeIntraEall()
   + computeIntraEall() : Eall* computation via vrna_pf() using the respective
     accessibility constraints
 * IntaRNA/OutputHandlerEnsemble :
   - no output of Zall
   + output of RT, Eall1, Eall2, EallTotal 
 * IntaRNA/OutputHandlerCsv :
   + Eall1, Eall2, EallTotal, Etotal, Zall1, Zall2
 * README.md :
   + docu of new CSV columns (Eall1, Eall2, Zall1, Zall2, Etotal, EallTotal)
   * ensemble output docu updated

191021 Martin Raden
 + R/plotRegions.R :  visualization of sequence regions covered by RRI